Fix page scrolling horizontally on mobile

--- a/NetStone.Api/wwwroot/app.css
+++ b/NetStone.Api/wwwroot/app.css
@@ -39,6 +39,10 @@ h1:focus {
 }
 
 body {
+    display: grid;
+    justify-items: center;
+    gap: 40px;
+
     background: rgb(40, 44, 56);
 }
 
